--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ android.nonTransitiveRClass=true
 
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
