--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'com.example.eltinchopracticas'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.eltinchopracticas"
@@ -38,6 +38,7 @@ android {
     }
     buildFeatures{
         dataBinding true
+        viewBinding true
     }
 }
 
@@ -55,6 +56,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.5.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.androidx.support.test:runner:1.0.2'
