--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,5 @@ android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
+org.gradle.unsafe.configuration-cache=true
