--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .gradle
 /local.properties
 /.idea/caches
+/.idea/gradle.xml
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
