--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.5.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.androidx.support.test:runner:1.0.2'
